--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 apturl==0.5.2
+asgiref==3.2.3
 asn1crypto==0.24.0
 astroid==2.2.5
 beautifulsoup4==4.8.1
@@ -13,7 +14,7 @@ cupshelpers==1.0
 defer==1.0.6
 distro==1.3.0
 distro-info===0.21ubuntu2
-Django==2.2.4
+Django==3.0.2
 django-rest-knox==4.1.0
 djangorestframework==3.10.2
 entrypoints==0.3
@@ -36,7 +37,7 @@ netifaces==0.10.4
 oauthlib==2.1.0
 olefile==0.46
 pexpect==4.6.0
-Pillow==5.4.1
+Pillow==7.0.0
 protobuf==3.6.1
 pycairo==1.16.2
 pycrypto==2.6.1
@@ -52,8 +53,8 @@ python-dateutil==2.7.3
 python-debian==0.1.34
 pytz==2018.9
 pyudev==0.21.0
-pyxdg==0.25
-PyYAML==3.13
+pyxdg==0.26
+PyYAML==5.3
 reportlab==3.5.18
 requests==2.21.0
 requests-unixsocket==0.1.5
@@ -72,7 +73,7 @@ ubuntu-advantage-tools==19.2
 ubuntu-drivers-common==0.0.0
 ufw==0.36
 unattended-upgrades==0.1
-urllib3==1.24.1
+urllib3==1.25.7
 usb-creator==0.3.3
 virtualenv==15.1.0
 wadllib==1.3.3
